--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <form class="form" name="edit_form" action="#" novalidate>
           <h2 class="form__edit-title">Edit Profile</h2>
           <input class="form__input" id="profile-name" type="text" value="" placeholder="Name" name="edit_name" minlength="2" maxlength="40" required>
-            <span class="form__input-error">This field is required.
-            </span>
+          <span class="form__input-error" id="profile-name-error">This field is required.
+          </span>
           <input class="form__input" id="profile-about" type="text" value="" placeholder="About Me" name="edit_about" minlength="2" maxlength="200" required>
-            <span class="form__input-error">This field is required.
+            <span class="form__input-error" id="profile-about-error">This field is required.
             </span>
           <button class="form__btn-save" type="submit" aria-label="Save">Save</button>
         </form>
@@ -66,12 +66,12 @@
         <button class="popup__btn-close" type="button" aria-label="Close">
         </button>
         <form class="form form-add" name="add_form"  action="#" novalidate>
-          <h2 class="form__add-title">New Place</h2>
+          <h2 class="form__edit-title">New Place</h2>
           <input class="form__input" id="title" type="text" value="" placeholder="Title" name="add_title" minlength="1" maxlength="30" required>
-          <span class="form__input-error">This field is required.
+          <span class="form__input-error" id="title-error">This field is required.
           </span>
           <input class="form__input" id="image-link" type="url" value="" placeholder="Image Link" name="add_image-link"  required>
-          <span class="form__input-error">This field is required.
+          <span class="form__input-error" id="image-link-error">This field is required.
           </span>
           <button class="form__btn-save" type="submit" aria-label="Create">Create</button>
         </form>
