--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
         </div>
       </li>
     </template>
-  <script src="./script/script.js"></script>
-  <script src="./script/validate.js"></script>
-</body>
+ 
+   <script type="module" src="./script/FormValidator.js"></script>
+  <script type="module" src="./script/index.js"></script>
+  <script type="module" src="./script/Card.js"></script>
 </html>
