--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         </div>
       </li>
     </template>
- 
    <script type="module" src="./script/FormValidator.js"></script>
-  <script type="module" src="./script/index.js"></script>
-  <script type="module" src="./script/Card.js"></script>
+   <script type="module" src="./script/index.js"></script>
+   <script type="module" src="./script/Card.js"></script>
+ </body>
 </html>
