--- a/src/index.html
+++ b/src/index.html
@@ -48,10 +48,10 @@
         </button>
         <form class="form" name="edit_form" action="#" novalidate>
           <h2 class="form__edit-title">Edit Profile</h2>
-          <input class="form__input profile-name" id="profile-name" type="text" value="" placeholder="Name" name="edit_name" minlength="2" maxlength="40" required>
+          <input class="form__input profile-name" id="profile-name" type="text" value="" placeholder="Name" name="editName" minlength="2" maxlength="40" required>
           <span class="form__input-error" id="profile-name-error">This field is required.
           </span>
-          <input class="form__input profile-about" id="profile-about" type="text" value="" placeholder="About Me" name="edit_about" minlength="2" maxlength="200" required>
+          <input class="form__input profile-about" id="profile-about" type="text" value="" placeholder="About Me" name="editAbout" minlength="2" maxlength="200" required>
             <span class="form__input-error" id="profile-about-error">This field is required.
             </span>
           <button class="form__btn-save" type="submit" aria-label="Save">Save</button>
