--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
         </button>
         <form class="form form-add" name="edit_form" action="#" novalidate>
           <h2 class="form__edit-title">Change Profile Picture</h2>
-          <input class="form__input" type="url" name="avatar" id="avatar" value="" placeholder="Avatar url" name="link" required>
+          <input class="form__input" type="url" name="avatar" id="avatar" value="" placeholder="Avatar url" required>
           <span class="form__input-error" id="avatar-error">This field is required.
           </span>
           <button class="form__btn-save" type="submit" aria-label="Save">Save</button>
